# slicOutDoorParallelCollection.Spiral

./: README.md
trunk/ProjectCode/SGVcode/: CMakeLists.txt  ReadMe.txt  SLICSuperpixels.cpp  SLICSuperpixels.rc  SLICSuperpixels.vcxproj  SLICSuperpixels.vcxproj.filters  SLICSuperpixelsDlg.cpp  SLICSuperpixelsDlg.h  general.h  main.cpp  mainpage.h  module_all_cui.h  module_websocket.h  platform_cui.h  resource.h  stdafx.h  type.h
trunk/ProjectCode/SGVcode/CuiLib/: CMakeLists.txt  cpp_stl.h  modules.h  opencv_stl.h  platform.h  qt_all.h
trunk/ProjectCode/SGVcode/CuiLib/FilePathName/: CMakeLists.txt  FileNameSplit.cpp  FileNameSplit.h  PointWithDistance.cpp  PointWithDistance.h
trunk/ProjectCode/SGVcode/CuiLib/HW_SDK_LIB/: CMakeLists.txt  dc_save.cpp  dc_save.h  howellnetsdk.h  hw_dev.cpp  hw_dev.hpp  hw_nvr.cpp  hw_nvr.h  ipc.cpp  ipc.h  live_set.cpp  live_set.h  live_video.cpp  live_video.h  live_video_base.cpp  live_video_base.h  play_def.h  play_err.h  play_type.h  protocol_type.h
trunk/ProjectCode/SGVcode/CuiLib/Harr/: CMakeLists.txt  CuiHarrTransformLet.cpp  CuiHarrTransformLet.h  HarrTransformUser.cpp  HarrTransformUser.hpp  HarrWaveletTransImg.cpp
trunk/ProjectCode/SGVcode/CuiLib/JQLibrary/: CMakeLists.txt
trunk/ProjectCode/SGVcode/CuiLib/ML/: CMakeLists.txt
trunk/ProjectCode/SGVcode/CuiLib/MY_SDK_LIB/: Base.cpp  Base.h  BlockAnalysis.cpp  BlockAnalysis.hpp  BlockProperty.cpp  BlockProperty.hpp  CMakeLists.txt  CrackDetection.cpp  CrackDetection.hpp  ICamera.hpp  ImageProcess.cpp  ImageProcess.h  LatLng.cpp  LatLng.h  Line2Point.cpp  Line2Point.hpp  OpencvCamera.cpp  OpencvCamera.hpp  OutCircleFeature.cpp  OutCircleFeature.hpp  PathCfg.cpp  PathCfg.h  TimeMeasure.cpp  TimeMeasure.hpp  VideoRecord.cpp  VideoRecord.h
trunk/ProjectCode/SGVcode/CuiLib/QT_SDK_LIB/: CMakeLists.txt  IPrint.cpp  IPrint.hpp  QBase.cpp  QBase.h  QtThreadBase.hpp
trunk/ProjectCode/SGVcode/CuiLib/QT_THREAD_FLOW_CTRL/: CMakeLists.txt  QtTcpServerFlowCtrl.cpp  QtTcpServerFlowCtrl.hpp  QtThreadFlowCtrlBase.cpp  QtThreadFlowCtrlBase.hpp  QtThreadFlowCtrlClient.cpp  QtThreadFlowCtrlClient.hpp  QtThreadFlowCtrlLocal.cpp  QtThreadFlowCtrlLocal.hpp  QtThreadFlowCtrlServer.cpp  QtThreadFlowCtrlServer.hpp  QtThreadFlowCtrlServerSession.cpp  QtThreadFlowCtrlServerSession.hpp  QtThreadFlowCtrlSession.cpp  QtThreadFlowCtrlSession.hpp  QtThreadPlcNetClient.cpp  QtThreadPlcNetClient.hpp  QtThreadPlcSimulatorClient.cpp  QtThreadPlcSimulatorClient.hpp  QtThreadSocketClientRoller.cpp  QtThreadSocketClientRoller.hpp  QtThreadSocketClientSig.cpp  QtThreadSocketClientSig.hpp
trunk/ProjectCode/SGVcode/CuiLib/QT_THREAD_MODULE/: CMD_WORK_FLOW.cpp  CMD_WORK_FLOW.hpp  CMakeLists.txt  IPlcSjts.cpp  IPlcSjts.hpp  IStepMotorSjts.cpp  IStepMotorSjts.hpp  QtImgProcess.cpp  QtImgProcess.hpp  QtSigSjts.cpp  QtSigSjts.hpp  QtThread8ImgProcess.cpp  QtThread8ImgProcess.hpp  QtThread8Video.cpp  QtThread8Video.hpp  QtThread8VideoProcess.cpp  QtThread8VideoProcess.hpp  QtThread8VideoRaw.cpp  QtThread8VideoRaw.hpp  QtThreadClientCtrl.cpp  QtThreadClientCtrl.hpp  QtThreadPLC.cpp  QtThreadPLC.hpp  QtThreadPlcSimulatorClient.cpp  QtThreadPlcSimulatorClient.hpp  QtThreadPlcSocket.cpp  QtThreadPlcSocket.hpp  QtThreadPlcSocketClient.cpp  QtThreadPlcSocketClient.hpp  QtThreadStepMotor.cpp  QtThreadStepMotor.hpp  QtThreadStepMotorServer.cpp  QtThreadStepMotorServer.hpp  StepMotorSjts.cpp  StepMotorSjts.hpp
trunk/ProjectCode/SGVcode/CuiLib/SGVcode/: CMakeLists.txt  ColorAnalyzeOnLab.cpp  ColorAnalyzeOnLab.h  ColorBarCluster.cpp  ColorBarCluster.h  ComputeSVG.cpp  ComputeSVG.h  ComputeSVG2.cpp  ComputeSVG2.h  Cui_DrawDepth.cpp  Cui_DrawDepth.h  HsHg.cpp  HsHg.h  ImageData.cpp  ImageData.h  ImageMemData.cpp  ImageMemData.h  ImageType.h  LabColorAnalyzeCluster _veins.cpp  LabColorAnalyzeCluster.cpp  LabColorAnalyzeCluster.h  LabColorAnalyzeCluster_veins.h  MallocCui.cpp  MallocCui.h  ManhattanHistogram.cpp  ManhattanHistogram.h  SLIC.cpp  SLIC.h  SceneDetermine.cpp  SceneDetermine.h  SeparateSpBlock.cpp  SeparateSpBlock.h  SpAnalyze.cpp  SpAnalyze.h  SpSetProperty.cpp  SpSetProperty.h  SpectralClusterInDoor.cpp  SpectralClusterInDoor.h  SpectralClustering.cpp  SpectralClustering.h  (+13 more)
trunk/ProjectCode/SGVcode/CuiLib/SVMcode/: CMakeLists.txt  TrainImgUseSvm.cpp  TrainImgUseSvm.h  TrainTreeBuilding.cpp  TrainTreeBuilding.h
trunk/ProjectCode/SGVcode/CuiLib/SerialPort/: AGV_Dirver.cpp  AGV_Dirver.h  BE_1105_Dirver.cpp  BE_1105_Dirver.hpp  Gps_WG_8020.h  (+13 more)
trunk/ProjectCode/SGVcode/cmake/: FindOpencv.cmake  FindQT.cmake  LinuxPrepare.cmake  SetBoost.cmake  SetCUDA.cmake  SetMFC.cmake  SetPthreads.cmake  env.cfg.txt
trunk/ProjectCode/SGVcode/crack_detect_factory_init_tcp_client/: CMakeLists.txt  module_my.h  mytcpclient.cpp  mytcpclient.h  mytcpclient.ui
trunk/ProjectCode/SGVcode/crack_detect_img_process/: CMakeLists.txt  ClickableLabel.cpp  MouseLabel.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  module_my.h
trunk/ProjectCode/SGVcode/crack_detect_life_cycle/: CMakeLists.txt  main.cpp  module_my.h
trunk/ProjectCode/SGVcode/crack_detect_plc_control/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/ProjectCode/SGVcode/env/: .bashrc  env.cfg.txt
trunk/ProjectCode/SGVcode/main_foxconn/: CMakeLists.txt  main_foxconn.cpp
trunk/ProjectCode/SGVcode/main_gui_crack/: CMakeLists.txt  DoWork.cpp  DoWork.hpp  main.cpp  main_crack.cpp  main_crack_detection.cpp  main_crack_in.cpp  main_crack_svm.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/ProjectCode/SGVcode/main_qt_test/: CMakeLists.txt  ClickableLabel.h  MouseLabel.cpp  dialog.cpp  dialog.h  main.cpp  main_qt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  module_my.h
trunk/ProjectCode/SGVcode/main_test/: CMakeLists.txt  agv_car_test.cpp  be1105_test.cpp  calibration.cpp  duanzao.cpp  gps_test.cpp  howell_calibration.cpp  http_test.cpp  hw_avi2Image.cpp  hw_base.cpp  hw_hello.cpp  json_test.cpp  opencv_test.cpp  ucos_mem_test.cpp  websocket_test.cpp
trunk/TestProject/ubuntu_opencv/cpp/: CMakeLists.txt
(+197 files in other folders)
